Agrega fuentes, estilos, texto

--- a/index.html
+++ b/index.html
@@ -4,14 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estilos con CSS</title>
+    <link rel="stylesheet" href="./style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jersey+20+Charted&family=Shadows+Into+Light&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Hola mundo CSS</h1>
-    <style>
-        h1{
-            color: lemonchiffon;
-        }
-    </style>
+    <h1 class="texto-grande">Hola mundo CSS</h1>
+    <h1 id="texto-pequeno">Selector a nivel de identificador</h1>
+
+    <header>
+        <nav>
+            <a href="www.facebook.com">Facebook</a>
+        </nav>
+    </header>
+
+    <aside>
+        <nav>
+            <ul>
+                <li>
+                    <a href="www.facebook.com">twitter</a>
+                </li>
+                <li>
+                    <a href="www.facebook.com">Instagram</a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+
+    <p class="transformaciones">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur, quo id minima deserunt enim expedita consectetur. Quos earum tempora, recusandae hic ipsa nostrum vero repudiandae, nam maxime dolorem consectetur quidem.</p>
     
+    <!-- Comando del atajo p.espaciado-de-textos -->
+    <p class="espaciado-de-texto">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ipsam at fuga blanditiis corrupti voluptate harum reiciendis non ut omnis, amet dolorum! Accusamus adipisci illum assumenda, accusantium ut earum corporis.
+    </p>
+
+    <h1>Posicion</h1>
+
+    <div class="caja-padre">
+        <div class="posicion-caja-1">1</div>
+        <div class="posicion-caja-2">2</div>
+        <div class="posicion-caja-3">3</div>
+    </div>
+
+    <img src="" alt="" class="">
+
 </body>
 </html>
+
