Se creo cuadricula e imagen

--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estilos con CSS</title>
     <link rel="stylesheet" href="./style.css">
-
+<!-- Enlace de tipo de fuente -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+20+Charted&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="caja">
+        <p>Esto es una caja</p>
+    </div>
     <h1>Hola mundo CSS</h1>
-    <h1 class="texto-grande">Hola mundo CSS</h1>
+    <h1>Selector a nivel de etiqueta</h1>
+    <h1 class="texto-grande">Selector a nivel de clase</h1>
     <h1 id="texto-pequeno">Selector a nivel de identificador</h1>
+
+
+    <!-- Alineacion de texto -->
+    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quae eius ea sequi repellat delectus quasi quisquam ex, accusamus, quaerat totam architecto modi facere voluptatibus omnis consequatur mollitia placeat nam.</p>
+    <p class="tamaño">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis commodi officia quod, atque harum sit earum, eaque, reiciendis maiores libero nisi illo distinctio sed asperiores? Voluptatibus aliquam fugiat ut atque!</p>
+    <p class="decoraciones">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates, saepe itaque. Culpa repudiandae maiores laborum dolor soluta numquam necessitatibus, illo aperiam tempore deserunt velit ullam atque, alias dolorum pariatur cumque.</p>
 
     <header>
         <nav>
@@ -49,7 +59,17 @@
         <div class="posicion-caja-3">3</div>
     </div>
 
-    <img src="" alt="" class="">
+    <h1>Grid - Cuadricula</h1>
+
+    <div class="cuadricula">
+        <img class="perro-imagen uno" src="./img/Golden.jpg" alt="Perro cachorro raza Golden">
+        <img class="perro-imagen" src="./img/Golden.jpg" alt="Perro cachorro raza Golden">
+        <img class="perro-imagen" src="./img/Golden.jpg" alt="Perro cachorro raza Golden">
+        <img class="perro-imagen" src="./img/Golden.jpg" alt="Perro cachorro raza Golden">
+        <img class="perro-imagen" src="./img/Golden.jpg" alt="Perro cachorro raza Golden">
+        <img class="perro-imagen" src="./img/Golden.jpg" alt="Perro cachorro raza Golden">
+        <p class="tamaño">Algo</p>
+    </div>
 
 </body>
 </html>
